# wii-rip

./: .gitignore  Cargo.toml  README.md  wii_rip.py
.gitea/workflows/: release.yml
.github/workflows/: release.yml
Source/wii-banner-render/: CMakeLists.txt  LICENSE.txt  MODIFICATIONS.md  Main.cpp  NOTICE.md  README.md  Sound.cpp
Source/wii-banner-render/Source/: Banner.cpp  Banner.h  Font.cpp  Font.h  Funcs.h  Layout.h  Main.cpp  TextRenderer.cpp  TextRenderer.h  Textbox.cpp  WrapGx.cpp
lib/: bnr_parser.py  bns_decoder.py
packaging/: build_banner_render.sh  build_dolphin_tool.sh  build_portable.py  build_release.sh  build_wit.sh  regenerate_font_header.sh
src/: bnr.rs  bns.rs  main.rs
